--- a/appsettings.json
+++ b/appsettings.json
@@ -6,11 +6,25 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "Domain": "microsoft.onmicrosoft.com",
-    "TenantId": "72f988bf-86f1-41af-91ab-2d7cd011db47",
-    "ClientId": "c6a317cb-a6b2-4c14-ad6f-1fe8c754caf3",
+    "Domain": "qualified.domain.name",
+    "TenantId": "22222222-2222-2222-2222-222222222222",
+    "ClientId": "11111111-1111-1111-11111111111111111",
 
+    "ClientSecret": "secret-from-app-registration",
+    "ClientCertificates" : [
+    ],
     "CallbackPath": "/signin-oidc"
+  },
+  "DownstreamAPI": {
+    /*
+     'Scopes' contains space separated scopes of the Web API you want to call. This can be:
+      - a scope for a V2 application (for instance api:b3682cc7-8b30-4bd2-aaba-080c6bf0fd31/access_as_user)
+      - a scope corresponding to a V1 application (for instance <App ID URI>/.default, where  <App ID URI> is the
+        App ID URI of a legacy v1 Web application
+      Applications are registered in the https:portal.azure.com portal.
+    */
+    "BaseUrl": "https://graph.microsoft.com/v1.0",
+    "Scopes": "user.read"
   },
   "Logging": {
     "LogLevel": {
